Project

General

Profile

Actions

Bug #24348

closed

rgw (luminous) making implicit_tenants backwards compatible.

Added by Marcus Watts almost 6 years ago. Updated about 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus mimic luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

In jewel, "rgw keystone implicit tenants" only applied to swift. In luminous(,+), it applies to s3 also. Sites that used this feature with jewel now have outstanding data that depends on the old behavior. One proposal to fix this was to expand this option so that it can be set to "none", "all", "s3" or "swift".


Related issues 3 (0 open3 closed)

Copied to rgw - Backport #24393: luminous: rgw: making implicit_tenants backwards compatibleResolvedMarcus WattsActions
Copied to rgw - Backport #44444: nautilus: rgw (luminous) making implicit_tenants backwards compatible.ResolvedCasey BodleyActions
Copied to rgw - Backport #44445: mimic: rgw (luminous) making implicit_tenants backwards compatible.ResolvedCasey BodleyActions
Actions #1

Updated by Marcus Watts almost 6 years ago

I've made a PR that I beleive will address this.
https://github.com/ceph/ceph/pull/22363
this is for luminous: I'll need to make what should be a very similar PR for master.

The main complication is that it turns out the code that was in luminous only looked at "rgw keystone implicit tenants" when creating a new shadow user. With this PR, it look at that first to see if it's operating in "split mode" (implicit tenants only enabled for one protocol), and if so, only looks for the kind of shadow user that it would otherwise create.

Actions #2

Updated by Matt Benjamin almost 6 years ago

  • Status changed from New to Fix Under Review
Actions #3

Updated by Nathan Cutler almost 6 years ago

  • Backport set to mimic, luminous
Actions #4

Updated by Marcus Watts almost 6 years ago

I've made a PR against master.
https://github.com/ceph/ceph/pull/22378
exactly the same logic as the original PR I made against luminous. This should apply cleanly against mimic as well.

Actions #5

Updated by Nathan Cutler almost 6 years ago

  • Copied to Backport #24393: luminous: rgw: making implicit_tenants backwards compatible added
Actions #6

Updated by Casey Bodley about 4 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport changed from mimic, luminous to nautilus mimic
Actions #7

Updated by Casey Bodley about 4 years ago

  • Copied to Backport #44444: nautilus: rgw (luminous) making implicit_tenants backwards compatible. added
Actions #8

Updated by Casey Bodley about 4 years ago

  • Copied to Backport #44445: mimic: rgw (luminous) making implicit_tenants backwards compatible. added
Actions #9

Updated by Nathan Cutler about 4 years ago

  • Backport changed from nautilus mimic to nautilus mimic luminous

ERROR:root:https://tracker.ceph.com/issues/24348 has more backport issues (luminous,mimic,nautilus) than expected (mimic,nautilus)

Actions #10

Updated by Nathan Cutler about 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF